--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,3 @@
-<footer id="footer" class="footer">
+<footer>
 			<address>CopyLeft. 2012, SL. All wrongs reserved.&nbsp;&nbsp; <br class="visible-xs" />주소 : 아프리카 사자굴 &nbsp;&nbsp;</address>
-
 </footer>
