--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,7 +1,18 @@
-<div style="clear:both">
-	<div class="alert alert-success">
-		<a href="#" class="close" data-dismiss="alert">&times;</a>	
-		<h4><%=t(:success_title)%></h4>
-		<p id="notice"><%= notice %></p>
-	</div>
+<div id="messages">
+  <% if notice %>
+    <div class="alert alert-success" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span><span class="sr-only"><%= t(:close) %></span></button>
+      <h4><%= t(:success_title) %></h4>
+      <p id="message-notice"><%= notice %></p>
+    </div>
+  <% end %>
+  <% if alert %>
+    <div class="alert alert-danger" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span aria-hidden="true">&times;</span><span class="sr-only"><%= t(:close) %></span></button>
+      <h4><%= t(:alert_title) %></h4>
+      <p id="message-alert"><%= alert %></p>
+    </div>
+  <% end %>
 </div>
