--- a/app/views/layouts/admin/_footer.html.erb
+++ b/app/views/layouts/admin/_footer.html.erb
@@ -1,3 +1,10 @@
 <footer>
-	<address>&copy; <a href="http://www.sleepinglion.pe.kr" title="<%=t(:sleepinglion) %>" target="_blank"><%=t(:sleepinglion) %></a> 2017</address>
+  <div class="container">
+    <div class="row">
+      <address class="col-12">
+        <a href="<%=t(:site_full_url) %>" target="_blank"><%=t(:service_name) %></a>
+        &nbsp;&nbsp; 관리자 페이지
+      </address>
+    </div>
+  </div>
 </footer>
