--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -1,50 +1,168 @@
-<!-- start: Header -->
 <header>
-	<h1 class="col-xs-12 col-sm-4 col-md-3 col-lg-2"><%=link_to admin_path,:class=>"brand" do %><span class="hidden-phone"><%=t(:service_name)%></span><% end %></h1>
-	<div id="top_menu">
-		<ul class="nav">
-			<li class="dropdown">
-				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-					<% if current_admin.photo?  %>
-					<%=image_tag current_admin.photo.small_thumb %>
-					<% end %>&nbsp;
-					<%=current_admin.nickname %>
-					<span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu">
-					<li><%= link_to edit_admin_registration_path do %><i class="glyphicon glyphicon-user"></i> <%=t(:admin_profile) %><% end %></li>
-					<li><%= link_to destroy_admin_session_path do %><i class="glyphicon glyphicon-off"></i> <%=t(:logout) %><% end %></li>
-				</ul>
-			</li>
-			<li class="dropdown">
-				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-					<% if I18n.locale.to_s=='ko' %>
-					<%=t(:korean) %>
-					<% end %>
-					<% if I18n.locale.to_s=='zh-CN' %>
-					<%=t(:chineses) %>
-					<% end %>
-					<% if I18n.locale.to_s=='en' %>
-					<%=t(:english) %>
-					<% end %>
-					<span class="caret"></span>
-				</a>
-				<ul class="dropdown-menu">
-					<% unless I18n.locale=='ko' %>
-					<li><%= link_to url_for(:locale=>'ko') do %><%=t(:korean) %><% end %></li>
-					<% end %>
-					<% unless I18n.locale=='zh-CN' %>
-					<li><%= link_to url_for(:locale=>'zh-CN') do %><%=t(:chineses) %><% end %></li>
-					<% end %>
-					<% unless I18n.locale=='en' %>
-					<li><%= link_to url_for(:locale=>'en') do %><%=t(:english) %><% end %></li>
-					<% end %>
-				</ul>
-			</li>
-		</ul>
-	</div>
-		<nav class="col-xs-12 col-md-8 col-lg-7">
-			<%= render :partial => 'layouts/admin/menu' %>
-		</nav>
+  <div id="header-top">
+    <div class="container">
+      <div class="row">
+        <h1 class="col-12"><%= link_to t(:service_name), admin_path %></h1>
+        <ul id="top-menu">
+          <% if admin_signed_in? %>
+            <li style="margin-right:30px">
+              <% if current_admin.admin_picture.present? %>
+                <%=image_tag(current_admin.admin_picture.picture.small_thumb.url,{:height=>50,:width=>50}) %>
+              <% else %>
+                <%= link_to edit_admin_registration_path do %><%= t(:welcome) %>
+                <% end %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to destroy_admin_session_path, :id => "p_logout" do %>
+                <i class="material-icons" style="font-size:35px;vertical-align:middle">highlight_off</i><span><%= t(:logout) %></span>
+              <% end %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to new_admin_session_path do %>
+                <i class="material-icons">login</i><span><%= t(:login) %></span>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div id="header-main">
+    <nav id="main-menu" class="container">
+      <ul class="nav">
+        <li class="nav-item
+          <% if ['orders'].include?(params[:controller]) %> active
+          <% end %>">
+          <%= link_to admin_orders_path, :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
+            <i class="material-icons">payment</i><span><%= t(:order, scope: [:activerecord, :models]) %></span>
+          <% end %>
+          <ul class="dropdown-menu">
+            <li
+              <% if params[:controller] == 'orders' and params[:action] == 'index' %> class="active"
+              <% end %>>
+              <%= link_to admin_orders_path, :class => "nav-link" do %>
+                <i class="material-icons">local_cafe</i><span><%= t(:search_order) %></span>
+              <% end %>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item
+          <% if ['products', 'product_categories'].include?(params[:controller]) %> active
+          <% end %>">
+          <%= link_to admin_products_path, :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
+            <i class="material-icons">masks</i><span><%= t(:product, scope: [:activerecord, :models]) %></span>
+          <% end %>
+          <ul class="dropdown-menu">
+            <li
+              <% if params[:controller] == 'proudcts' %> class="active"
+              <% end %>>
+              <%= link_to admin_products_path, :class => "nav-link" do %>
+                <i class="material-icons">masks</i><span><%= t(:product, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li
+              <% if params[:controller] == 'product_categories' %> class="active"
+              <% end %>>
+              <%= link_to admin_product_categories_path, :class => "nav-link" do %>
+                <i class="material-icons">masks</i><span><%= t(:product_category, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+          </ul>
+        </li>
+          <li class="nav-item
+            <% if ['accounts', 'accounts_products', 'accounts_product_categories'].include?(params[:controller]) %> active
+            <% end %>">
+            <%= link_to raw('<i class="material-icons">group</i>'+t(:account, scope: [:activerecord, :models])),admin_accounts_path,:class => "nav-link"  %>
+          </li>
+        <li class="nav-item
+          <% if ['users'].include?(params[:controller]) %> active
+          <% end %>">
+          <%= link_to '#', :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
+            <i class="material-icons">group</i><span><%= t(:user, scope: [:activerecord, :models]) %></span>
+          <% end %>
+          <ul class="dropdown-menu">
+            <li<% if params[:controller] == 'users' %> class="active"<% end %>>
+              <%= link_to admin_users_path, :class => "nav-link" do %>
+                <i class="material-icons">group</i><span><%= t(:user, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li
+              <% if params[:controller] == 'admins' %> class="active"
+              <% end %>>
+              <%= link_to admin_operators_path, :class => "nav-link" do %>
+                <i class="material-icons">group</i><span><%= t(:operator, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item
+          <% if ['faqs','faq_categories','contacts','notices','boards'].include?(params[:controller]) %> active
+            <% end %>">
+          <%= link_to '#', :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
+            <i class="material-icons">list</i><span><%=t(:board, scope: [:activerecord, :models]) %></span>
+          <% end %>
+          <ul class="dropdown-menu">
+            <li<% if params[:controller] == 'notices' %> class="active"<% end %>>
+              <%= link_to admin_notices_path, :class => "nav-link" do %>
+                <i class="material-icons">list</i><span><%= t(:notice, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li<% if params[:controller] == 'boards' %> class="active"<% end %>>
+              <%= link_to admin_boards_path, :class => "nav-link" do %>
+                <i class="material-icons">list</i><span><%= t(:board, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li<% if params[:controller] == 'faqs' %> class="active"<% end %>>
+              <%= link_to admin_faqs_path, :class => "nav-link" do %>
+                <i class="material-icons">list</i><span><%= t(:faq, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li<% if params[:controller] == 'faq_categories' %> class="active"<% end %>>
+              <%= link_to admin_faq_categories_path, :class => "nav-link" do %>
+                <i class="material-icons">list</i><span><%= t(:faq_category, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li<% if params[:controller] == 'contacts' %> class="active"<% end %>>
+              <%= link_to admin_contacts_path, :class => "nav-link" do %>
+                <i class="material-icons">list</i><span><%= t(:contact, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item
+          <% if ['sliders','settings'].include?(params[:controller]) %> active
+          <% end %>">
+          <%= link_to '#', :class => "nav-link dropdown-toggle", :'data-toggle' => "dropdown", :role => "button", :'aria-haspopup' => "true", :'aria-expanded' => "false" do %>
+            <i class="material-icons">settings</i><span><%= t(:setting, scope: [:activerecord, :models]) %></span>
+          <% end %>
+          <ul class="dropdown-menu">
+            <li<% if params[:controller] == 'sliders' %> class="active"<% end %>>
+              <%= link_to admin_sliders_path, :class => "nav-link" do %>
+                <i class="material-icons">slideshow</i><span><%= t(:slider, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li
+              <% if params[:controller] == 'intro' %> class="active"
+              <% end %>>
+              <%= link_to admin_intro_index_path, :class => "nav-link" do %>
+                <i class="material-icons">settings</i><span><%= t(:intro, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+            <li
+              <% if params[:controller] == 'location' %> class="active"
+              <% end %>>
+              <%= link_to admin_location_index_path, :class => "nav-link" do %>
+                <i class="material-icons">settings</i><span><%= t(:location, scope: [:activerecord, :models]) %></span>
+              <% end %>
+            </li>
+          </ul>
+        </li>
+
+      </ul>
+    </nav>
+  </div>
 </header>
-<!-- start: Header -->
+
