--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -1,50 +1,59 @@
 <article id="sl_main_gallery" class="col-12 carousel slide" data-ride="carousel" itemscope itemtype="http://schema.org/ImageObject">
-	<h3><%= t('activerecord.models.gallery') %></h3>
+  <h3><%= t('activerecord.models.gallery') %></h3>
+  <% unless @galleries.empty? %>
+    <% if @galleries.count > 6 %>
+      <ol class="carousel-indicators">
+        <% @galleries.each_slice(6).each_with_index do |gallery, index| %>
+          <li data-target="#sl_main_gallery" data-slide-to="<%= index %>"
+          <% if index.zero? %> class="active"
+          <% end %>></li>
+        <% end %>
+      </ol>
+    <% end %>
+  <% end %>
+  <% unless @galleries.empty? %>
+    <div class="carousel-inner" role="listbox">
+      <% @galleries.each_slice(5).each_with_index do |gallery, index| %>
+        <div class="carousel-item
+          <% if index.zero? %> active
+          <% end %>">
+          <% gallery.each_with_index do |gallery, index2| %>
+            <% if (index2 == 5) then
+                 g_class = 'nm'
+               else
+                 if (index2 == 2) then
+                   g_class = ' m_nm'
+                 else
+                   g_class = ''
+                 end %>
+              <%= link_to image_tag(asset_path('ajax-loader.gif'), :alt => gallery.title, :'data-original' => sl_get_thumb(gallery.photo.to_s, 'medium'), :class => 'lazy img-responsive'), gallery_path(gallery) %>
+              <noscript>
+                <%= link_to image_tag(sl_get_thumb(gallery.photo.to_s, 'medium'), :alt => gallery.title, :class => 'img-responsive'), gallery_path(gallery) %>
+              </noscript>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <div>
+      <p>
+        <%= t(:no_data) %>
+      </p>
+    </div>
+  <% end %>
 
-	<% unless @galleries.empty? %>
-	<% if @galleries.count > 6 %>
-	<ol class="carousel-indicators">
-		<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
-		<li data-target="#sl_main_gallery" data-slide-to="<%= index %>" <% if index.zero? %>class="active"<% end %>></li>
-		<% end %>
-	</ol>
-	<% end %>
-	<% end %>
+  <!-- Controls -->
+  <% if @galleries.count > 6 %>
+    <a class="carousel-control-prev" href="#sl_main_gallery" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#sl_main_gallery" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  <% end %>
 
-	<% unless @galleries.empty? %>
-	<div class="carousel-inner" role="listbox">
-		<% @galleries.each_slice(5).each_with_index do |gallery,index| %>
-		<div class="carousel-item<% if index.zero? %> active<% end %>">
-			<% gallery.each_with_index do |gallery,index2| %>
-			<% if(index2==5) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
-			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title, :'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy img-responsive'),gallery_path(gallery) %>
-			<noscript>
-				<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title,:class=>'img-responsive'),gallery_path(gallery) %>
-			</noscript>
-			<% end %>
-			<% end %>
-		</div>
-		<% end %>
-	</div>
-	<% else %>
-	<div>
-		<p>
-			<%= t(:no_data) %>
-		</p>
-	</div>
-	<% end %>
-
-	<!-- Controls -->
-	<% if @galleries.count > 6 %>
-	<a class="carousel-control-prev" href="#sl_main_gallery" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#sl_main_gallery" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-	</a>
-	<% end %>
-
-	<%= link_to t(:link_more),galleries_path,:class=>'more' %>
+  <%= link_to t(:link_more), galleries_path, :class => 'more' %>
 </article>
