--- a/app/views/notices/_index.html.erb
+++ b/app/views/notices/_index.html.erb
@@ -5,7 +5,7 @@
 		<% @notices.each do |notice| %>
 		<li>
 			<%= link_to notice.title, notice  %>
-			<span class="d-none d-lg-block"><%=notice.created_at.to_date %></span>
+			<span class="d-none d-lg-block float-right text-muted"><%=notice.created_at.to_date %></span>
 		</li>
 		<% end %>
 		<% else %>
