--- a/app/views/home/popup.html.erb
+++ b/app/views/home/popup.html.erb
@@ -1,15 +1,18 @@
-<div class="modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<h4 class="modal-title" id="myModalLabel">깨끗한 웹을 꿈꾸고 있습니다.</h4>
-		</div>
-		<div class="modal-body">
-무질서한 웹페이지들의 종말을 기대하며<br />
-나만이라도 깨끗한 최고의 웹페이지를 제작합니다.
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-primary" data-dismiss="modal"><%=t(:confirm) %></button>
-		</div>
-	</div>
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 class="modal-title text-left" id="myModalLabel">깨끗한 웹을 꿈꾸고 있습니다.</h4>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <p>무질서한 웹페이지들의 종말을 기대하며<br />
+        나만이라도 장인정신의 깨끗한 최고의 웹페이지를 제작합니다.
+      </p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary" data-dismiss="modal"><%= t(:confirm) %></button>
+    </div>
+  </div>
 </div>
