--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 	</div>
 </div>
 <%= render :partial => 'layouts/footer' %>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog"></div>
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </body>
 </html>
