--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,10 @@
 <meta name="author" content="Sleeping-Lion">
 <link rel="canonical" href="<%=t(:site_full_url) %>">
 <link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="<%= t(:site_full_url) %>/feed?format=rss">
-<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
+<%= stylesheet_link_tag "front/application", :media => "all", "data-turbolinks-track" => true %>
 <%= favicon_link_tag 'favicon.ico' %>
-<%= csrf_meta_tags -%>
+<%= csrf_meta_tags %>
+<%= csp_meta_tag -%>
 <!--[if IE]>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <![endif]-->
