--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -31,7 +31,7 @@
 					자동차 , 학교 , 군대 , 윈도우 , 주한미군
         </dd>
         <dt>E-mail</dt>
-        <dd><%=mail_to "admin@sleepinglion","admin@sleepinglion" %></dd>
+        <dd><%=mail_to "admin@sleepinglion.pe.kr","admin@sleepinglion.pe.kr" %></dd>
         <dt>텔레그램</dt>
         <dd><%=link_to "@toughjjh","https://t.me/toughjjh" %></dd>
 			</dl>
