--- a/app/views/layouts/admin/_footer.html.erb
+++ b/app/views/layouts/admin/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <address class="col-12">
-        <a href="<%=t(:site_full_url) %>" target="_blank"><%=t(:service_name) %></a>
+        <a href="<%=t(:site_full_url) %>" target="_blank"><%=t(:application_name) %></a>
         &nbsp;&nbsp; 관리자 페이지
       </address>
     </div>
