--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -2,8 +2,8 @@
 <html lang="<%=I18n.locale %>">
 <head>
   <meta charset="utf-8">
-  <title><%=t(:service_name)%></title>
-  <meta name="description" content="<%=t(:service_name)%>">
+  <title><%=t(:application_name)%></title>
+  <meta name="description" content="<%=t(:application_name)%>">
   <meta name="author" content="Sleeping-Lion">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <%= stylesheet_link_tag "admin/application", :media => "all", "data-turbolinks-track" => true %>
