--- a/app/views/guest_books/_form.html.erb
+++ b/app/views/guest_books/_form.html.erb
@@ -1,16 +1,17 @@
 <%= form_for @guest_book,:html=>{:class=>'form-horizontal'} do |f| %>
-<% if @guest_book.errors.any? %>
-<div id="error_explanation">
-	<h2><%= pluralize(@guest_book.errors.count, "error") %> prohibited this notice from being saved:</h2>
-	<ul>
-		<% @guest_book.errors.full_messages.each do |msg| %>
-		<li>
-			<%= msg %>
-		</li>
-		<% end %>
-	</ul>
-</div>
-<% end %>
+  <% if @guest_book.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger">
+      <a href="#" class="close" data-dismiss="alert">&times;</a>
+      <h2><%= pluralize(@guest_book.errors.count, "error") %> prohibited this request from being saved:</h2>
+      <ul>
+        <% @guest_book.errors.full_messages.each do |msg| %>
+          <li>
+            <%= msg %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <% unless user_signed_in? %>
 <div class="form-group">
 	<%= f.label :name, :class=>'control-label' %>
