--- a/app/assets/stylesheets/front/application.scss
+++ b/app/assets/stylesheets/front/application.scss
@@ -159,7 +159,7 @@ footer form {position:absolute;top:10px;right:10px}
 .sl_gallery {margin:10px 0}
 #gallery_main_content {margin:0 0 20px}
 #sl_gallery_left {float:left;position:relative;overflow:hidden}
-#sl_gallery_left figure {position:relative;}
+#sl_gallery_left figure {position:relative;overflow: hidden}
 #sl_gallery_left figure figcaption {position:absolute;display:block;bottom:0px;padding:5px 0;margin:0;text-align:center;color:#fff;width:100%;max-width:400px;background:#333;opacity:0.8}
 #sl_gallery_right h4 {margin:0 0 10px;padding:0}
 #sl_gallery_right div.text {margin:0 0 20px;line-height:170%}
